[gd_scene load_steps=47 format=3 uid="uid://dq4k0nfswtup0"]

[ext_resource type="Texture2D" uid="uid://dxbmk2sv3olp6" path="res://assets/sprites/Dwarf Sprite Sheet.png" id="1_0nfms"]
[ext_resource type="Script" path="res://scripts/dwarf.gd" id="1_8wxac"]
[ext_resource type="PackedScene" uid="uid://c5y73qisbixf0" path="res://scenes/health_bar.tscn" id="3_ixq1k"]
[ext_resource type="AudioStream" uid="uid://b16ah50ugbn3d" path="res://assets/sounds/dwarf-attack.mp3" id="4_vhvc8"]
[ext_resource type="AudioStream" uid="uid://ba6dojx2fev8a" path="res://assets/sounds/player_hurt.mp3" id="5_8rpr8"]
[ext_resource type="AudioStream" uid="uid://chblhhbrajmk" path="res://assets/sounds/dwarf-death.mp3" id="6_iyhs1"]
[ext_resource type="FontFile" uid="uid://cbh3hxq8qdpwb" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="7_ncmpv"]
[ext_resource type="AudioStream" uid="uid://boil5xov708s3" path="res://assets/sounds/points_bat.mp3" id="8_n0oay"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4mn3w"]
atlas = ExtResource("1_0nfms")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6hej0"]
atlas = ExtResource("1_0nfms")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j6lvs"]
atlas = ExtResource("1_0nfms")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8n44m"]
atlas = ExtResource("1_0nfms")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_egm5i"]
atlas = ExtResource("1_0nfms")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rlq58"]
atlas = ExtResource("1_0nfms")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vwujo"]
atlas = ExtResource("1_0nfms")
region = Rect2(192, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ep7e4"]
atlas = ExtResource("1_0nfms")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_24hnb"]
atlas = ExtResource("1_0nfms")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mgeid"]
atlas = ExtResource("1_0nfms")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4vysm"]
atlas = ExtResource("1_0nfms")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wh1hi"]
atlas = ExtResource("1_0nfms")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ol3t5"]
atlas = ExtResource("1_0nfms")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_clcet"]
atlas = ExtResource("1_0nfms")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cxon7"]
atlas = ExtResource("1_0nfms")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2o7b6"]
atlas = ExtResource("1_0nfms")
region = Rect2(128, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_60pxm"]
atlas = ExtResource("1_0nfms")
region = Rect2(160, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gn23x"]
atlas = ExtResource("1_0nfms")
region = Rect2(192, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f36hb"]
atlas = ExtResource("1_0nfms")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_awjxa"]
atlas = ExtResource("1_0nfms")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_35nvt"]
atlas = ExtResource("1_0nfms")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iabb3"]
atlas = ExtResource("1_0nfms")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bq2pk"]
atlas = ExtResource("1_0nfms")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o2b6t"]
atlas = ExtResource("1_0nfms")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0dwlr"]
atlas = ExtResource("1_0nfms")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8qn0g"]
atlas = ExtResource("1_0nfms")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mrwwd"]
atlas = ExtResource("1_0nfms")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b1g7v"]
atlas = ExtResource("1_0nfms")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_118ou"]
atlas = ExtResource("1_0nfms")
region = Rect2(160, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_an8gi"]
atlas = ExtResource("1_0nfms")
region = Rect2(192, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yvdpg"]
atlas = ExtResource("1_0nfms")
region = Rect2(224, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_uahje"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4mn3w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6hej0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j6lvs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8n44m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_egm5i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rlq58")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vwujo")
}],
"loop": true,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ep7e4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_24hnb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mgeid")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4vysm")
}],
"loop": true,
"name": &"damage",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wh1hi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ol3t5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_clcet")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cxon7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2o7b6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_60pxm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gn23x")
}],
"loop": true,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f36hb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_awjxa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_35nvt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iabb3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bq2pk")
}],
"loop": true,
"name": &"idele",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o2b6t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0dwlr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8qn0g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mrwwd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b1g7v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_118ou")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_an8gi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yvdpg")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_al6dh"]

[sub_resource type="CircleShape2D" id="CircleShape2D_yjylq"]
radius = 12.0

[sub_resource type="CircleShape2D" id="CircleShape2D_jd70f"]
radius = 13.0

[sub_resource type="Animation" id="Animation_mslvo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Kill_Point_Sound:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_cg33t"]
resource_name = "kill_points"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Kill_Points:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Kill_Point_Sound:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4dswc"]
_data = {
"RESET": SubResource("Animation_mslvo"),
"kill_points": SubResource("Animation_cg33t")
}

[node name="DwarfEnemy" type="CharacterBody2D"]
position = Vector2(0, -12)
script = ExtResource("1_8wxac")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -2)
sprite_frames = SubResource("SpriteFrames_uahje")
animation = &"death"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, 2)
shape = SubResource("CircleShape2D_al6dh")

[node name="DirectionTimer" type="Timer" parent="."]
autostart = true

[node name="DwarfHitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DwarfHitbox"]
position = Vector2(1, 2)
shape = SubResource("CircleShape2D_yjylq")

[node name="DwarfDealDamageArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DwarfDealDamageArea"]
position = Vector2(1, 2)
shape = SubResource("CircleShape2D_jd70f")

[node name="Health_Bar" parent="." instance=ExtResource("3_ixq1k")]
offset_left = -9.0
offset_top = -11.0
offset_right = 11.0
offset_bottom = -8.0

[node name="AttackSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_vhvc8")
volume_db = -15.0
pitch_scale = 1.1

[node name="HurtSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_8rpr8")
volume_db = -8.915
pitch_scale = 0.7

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_iyhs1")
volume_db = 3.0
pitch_scale = 0.8

[node name="Kill_Points" type="RichTextLabel" parent="."]
offset_left = -5.0
offset_top = -6.0
offset_right = 33.0
offset_bottom = 11.0
scale = Vector2(1e-05, 1e-05)
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/line_separation = 0
theme_override_constants/outline_size = 4
theme_override_fonts/normal_font = ExtResource("7_ncmpv")
theme_override_font_sizes/normal_font_size = 8
bbcode_enabled = true
text = "
+50"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4dswc")
}

[node name="Kill_Point_Sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_n0oay")

[connection signal="timeout" from="DirectionTimer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="DwarfHitbox" to="." method="_on_dwarf_hitbox_area_entered"]
[connection signal="area_entered" from="DwarfDealDamageArea" to="." method="_on_dwarf_deal_damage_area_area_entered"]
